--- a/Lesson_7/index.html
+++ b/Lesson_7/index.html
@@ -46,7 +46,7 @@
           </header>
 
     <main class="main">
-      <section class="content">
+      <div class="page1">
         <div class="main-content">
 
           <div class="button-wrapper">
@@ -57,9 +57,30 @@
             Introduction to computer science
           </span>
 
+          <div class="students-wrapper">
+            <button class="main-start-bt">Start learning for free</button>
+
+            <img src="./public/images/students.png" alt="#" class="students">
+
+            <span class="Join">Join 1k+ students</span>
+          </div>
+
+          <span class="description">
+            Donec et scelerisque quam. Aliquam varius et sapien a pharetra. 
+            Maecenas auctor, augue finibus rhoncus, orci lorem ultricies eli.
+          </span>
         </div>
-        <div class="main-image"></div>
-      </section>
+
+        <div class="main-img-wrapper">
+          <img src="./public/images/f-page.png" alt="#" class="main-img">
+        </div>
+      </div>
+
+      <div class="page2">
+        <span class="page2-title">New courses</span>
+
+
+      </div>
     </main>
     <footer class="footer"></footer>
   </div>
