--- a/Lesson_7/index.html
+++ b/Lesson_7/index.html
@@ -79,8 +79,50 @@
       <div class="page2">
         <span class="page2-title">New courses</span>
 
+        <div class="page2-content">
 
+          <section class="page2-part1-content">
+
+            <div class="text">
+              <h1 class="part1-title">The JavaScript Journey</h1>
+
+              <a href="#" class="learn-more">
+                <div class="text-learn-more">Learn more</div>
+
+                <div class="img-vector">
+                  <img src="./public/images/Vector.png" alt="#" class="vector">
+                </div>
+
+              </a>
+            </div>
+
+              <div class="section1-img-wrapper">
+                <img src="./public/images/page2-section1.png" alt="#" class="section1-img">
+              </div>
+          </section>
+
+          <section class="page2-part2-content">
+            <div class="text">
+              <h1 class="part2-title">An introduction to databases</h1>
+
+              <a href="#" class="learn-more">
+                <div class="text-learn-more">Learn more</div>
+
+                <div class="img-vector">
+                  <img src="./public/images/Vector.png" alt="#" class="vector">
+                </div>
+                
+              </a>
+            </div>
+
+              <div class="section2-img-wrapper">
+                <img src="./public/images/page2-section2.png" alt="#" class="section2-img">
+              </div>
+          </section>
+        </div>
       </div>
+
+      <div class="page3"></div>
     </main>
     <footer class="footer"></footer>
   </div>
