--- a/Lesson_7/index.html
+++ b/Lesson_7/index.html
@@ -122,8 +122,194 @@
         </div>
       </div>
 
-      <div class="page3"></div>
+        <div class="page3">
+        <span class="page3-title">Wall of love</span>
+
+          <section class="page3-part1-content">
+            <div class="user-wrapper1">
+
+              <div class="user1">
+                  <div class="user-info-wrapper">
+                    <div class="user1-info">
+
+                     <div class="user-img-wrapper">
+                       <img src="./public/images/page3-part1-user1.png" alt="#" class="user1-img">
+                     </div>
+  
+                     <div class="user1-contacts">
+                       <span class="name">Esther Howard</span>
+                       <span class="contact">@totallyrealperson</span>
+                     </div>
+                    </div>
+
+                    <div class="icon-wrapper">
+                      <img src="./public/images/twitter-img.png" alt="#" class="twitter">
+                    </div>
+
+                  </div>
+
+                  <p class="coment">
+                    Pharetra pharetra massa massa ultricies. 
+                    Accumsan sit amet nulla facilisi morbi. 
+                    Integer eget aliquet nibh praesent tristique magna sit amet. 
+                  </p>
+
+                  <span class="data">12:15 PM · May 19, 2009</span>
+              </div>
+  
+              <div class="user2">
+                <div class="user-info-wrapper">
+                  <div class="user2-info">
+
+                   <div class="user-img-wrapper">
+                     <img src="./public/images/page3-part1-user2.png" alt="#" class="user1-img">
+                   </div>
+
+                   <div class="user2-contacts">
+                     <span class="name">Leslie Alexander</span>
+                     <span class="contact">@totallyrealperson</span>
+                   </div>
+                  </div>
+
+                  <div class="icon-wrapper">
+                    <img src="./public/images/twitter-img.png" alt="#" class="twitter">
+                  </div>
+
+                </div>
+
+                <p class="coment">
+                  Magna fermentum iaculis eu non diam phasellus. 
+                  Arcu cursus euismod quis viverra nibh cras pulvinar mattis nunc.
+                </p>
+
+                <span class="data">12:15 PM · May 19, 2009</span>
+              </div>
+  
+              <div class="user3">
+                <div class="user-info-wrapper">
+                  <div class="user3-info">
+
+                   <div class="user-img-wrapper">
+                     <img src="./public/images/page3-part1-user3.png" alt="#" class="user1-img">
+                   </div>
+
+                   <div class="user3-contacts">
+                     <span class="name">Wade Warren</span>
+                     <span class="contact">@totallyrealperson</span>
+                   </div>
+                  </div>
+
+                  <div class="icon-wrapper">
+                    <img src="./public/images/twitter-img.png" alt="#" class="twitter">
+                  </div>
+
+                </div>
+
+                <p class="coment">
+                  Porttitor rhoncus dolor purus non. 
+                  Varius duis at consectetur lorem donec. 
+                  Aliquam ut porttitor leo a diam sollicitudin tempor id.
+                </p>
+
+                <span class="data">12:15 PM · May 19, 2009</span>
+              </div>
+            </div>
+          </section>
+
+          <section class="page3-part2-content">
+            <div class="user-wrapper2">
+
+              <div class="user1">
+                <div class="user-info-wrapper">
+                  <div class="user1-info">
+
+                   <div class="user-img-wrapper">
+                     <img src="./public/images/page3-part2-user1.png" alt="#" class="user1-img">
+                   </div>
+
+                   <div class="user1-contacts">
+                     <span class="name">Jacob Jones</span>
+                     <span class="contact">@totallyrealperson</span>
+                   </div>
+                  </div>
+
+                  <div class="icon-wrapper">
+                    <img src="./public/images/twitter-img.png" alt="#" class="twitter">
+                  </div>
+
+                </div>
+
+                <p class="coment">
+                  Aliquam faucibus purus in massa tempor. 
+                  Habitasse platea dictumst vestibulum rhoncus est pellentesque elit. 
+                </p>
+
+                <span class="data">12:15 PM · May 19, 2009</span>
+              </div>
+  
+              <div class="user2">
+                <div class="user-info-wrapper">
+                  <div class="user2-info">
+
+                   <div class="user-img-wrapper">
+                     <img src="./public/images/page3-part2-user2.png" alt="#" class="user1-img">
+                   </div>
+
+                   <div class="user2-contacts">
+                     <span class="name">Courtney Henry</span>
+                     <span class="contact">@totallyrealperson</span>
+                   </div>
+                  </div>
+
+                  <div class="icon-wrapper">
+                    <img src="./public/images/twitter-img.png" alt="#" class="twitter">
+                  </div>
+
+                </div>
+
+                <p class="coment">
+                  Nunc sed velit dignissim sodales ut eu sem integer. 
+                  Scelerisque varius morbi enim nunc faucibus. 
+                  Mi sit amet mauris commodo quis. 
+                </p>
+
+                <span class="data">12:15 PM · May 19, 2009</span>
+              </div>
+  
+              <div class="user3">
+                <div class="user-info-wrapper">
+                  <div class="user3-info">
+
+                   <div class="user-img-wrapper">
+                     <img src="./public/images/page3-part2-user3.png" alt="#" class="user1-img">
+                   </div>
+
+                   <div class="user3-contacts">
+                     <span class="name">Darrell Steward</span>
+                     <span class="contact">@totallyrealperson</span>
+                   </div>
+                  </div>
+
+                  <div class="icon-wrapper">
+                    <img src="./public/images/twitter-img.png" alt="#" class="twitter">
+                  </div>
+
+                </div>
+
+                <p class="coment">
+                  Donec et scelerisque quam. 
+                  Aliquam varius et sapien a pharetra. 
+                  Maecenas auctor, augue finibus rhoncus, orci lorem ultricies eli.
+                </p>
+
+                <span class="data">12:15 PM · May 19, 2009</span>
+              </div>
+            </div>
+
+          </section>
+      </div>
     </main>
+    
     <footer class="footer"></footer>
   </div>
 </body>
