--- a/Lesson_7/index.html
+++ b/Lesson_7/index.html
@@ -109,7 +109,7 @@
                 <div class="text-learn-more">Learn more</div>
 
                 <div class="img-vector">
-                  <img src="./public/images/Vector.png" alt="#" class="vector">
+                  <img src="./public/icons/Vector.png" alt="#" class="vector">
                 </div>
                 
               </a>
