--- a/Lesson_7/index.html
+++ b/Lesson_7/index.html
@@ -319,7 +319,7 @@
           <span class="title-description">Donec et scelerisque quam. Aliquam varius et sapien.</span>
   
           <div class="input">
-            <input class="e-mail" type="email">
+            <input class="e-mail" type="email" placeholder="Enter e-mail...">
   
             <button class="footer-bt-submit">Submit</button>
           </div>
