--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <header class="header">
                 <div class="navigation">
                   <nav class="nav">
-                      <a href="#" class="nav-link">Про нас</a>
+                      <a href="./pages/about-us/about-us.html" class="nav-link">Про нас</a>
                       <a href="#" class="nav-link">Каталог продукції</a>
                       <a href="#" class="nav-link">Оплата і доставка</a>
                       <a href="#" class="nav-link">Партнери</a>
